--- a/examples/index.html
+++ b/examples/index.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 </head>
 <body style="height: 100%">
-  <div id="content" style="height: 100%; width:100%">
+  <div id="content" style="margin-top: 30px; height: 100%; width:100%">
   </div>
   <script type="text/javascript" src="./build//FadeCarousel.js"></script>
 </body>
