fix example style.

--- a/demo/index.html
+++ b/demo/index.html
@@ -5,7 +5,7 @@
   <script type="text/javascript" src="https://fb.me/react-0.13.3.js"></script>
 </head>
 <body style="height: 100%">
-  <div id="content" style="height: 100%; width:100%">
+  <div id="content" style="margin-top: 50px;height: 100%; width:100%">
   </div>
   <script type="text/javascript" src="./build/Carousel.js"></script>
   <script type="text/javascript" src="./build/FadeCarousel.js"></script>
