--- a/demo/index.html
+++ b/demo/index.html
@@ -2,7 +2,7 @@
 <html style="height: 100%">
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">  
-  <script type="text/javascript" src="https://fb.me/react-0.13.3.js"></script>
+  <script type="text/javascript" src="https://fb.me/react-0.13.3.min.js"></script>
 </head>
 <body style="height: 100%; margin: 0px 0px 0px 0px">
   <div id="content" style="height: 100%; width:100%">
