--- a/examples/index.html
+++ b/examples/index.html
@@ -2,6 +2,7 @@
 <html style="height: 100%">
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <link rel="stylesheet" type="text/css" href="resources/FadeCarousel.css">
 </head>
 <body style="height: 100%">
   <div id="content" style="margin-top: 30px; height: 100%; width:100%">
